apps/custom/steel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steel
  namespace: steel
spec:
  selector:
    app.kubernetes.io/name: steel
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
