apps/custom/steel/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: steel
  namespace: steel
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`steel.nmajor.net`)
      kind: Rule
      services:
        - name: steel
          port: 80
      middlewares:
        - name: oauth2-auth
          namespace: traefik
        - name: header-transform
          namespace: traefik
  tls: {}
